fixing box size of message and adding visible border

--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ footer {
 /* contact section  */
 #contact .form-control {
   background: transparent;
-  border: 1px solid #f0f0f0;
+  border: 2px solid #e0e0e0;
   border-radius: 0px;
   box-shadow: none;
   font-size: 16px;
@@ -344,7 +344,7 @@ footer {
 }
 
 #contact .form-control:hover {
-  border-color: #999;
+  border: 2px solid #797979;
 }
 
 #contact input {height: 55px;}
